fix covers

--- a/_sass/templates/placeholder.scss
+++ b/_sass/templates/placeholder.scss
@@ -4,14 +4,14 @@
   background: #f0f0f0;
 
   .metadata{
-    margin: 10px;
+    // margin: 10px;
     
   }
   .cover{
-    // max-height: 100px;
+    max-height: 100px;
     margin-right: 10px;
     float: left;
-    width: 50%;
+    
   }
 
   h4{
@@ -37,9 +37,9 @@
   }
 
   .cover{
-    // max-height: 100px;
+    max-height: initial;
     margin-right: 10px;
     float: left;
-    width: 50%;
+    width: 45%;
   }
 }
